# rust_learn

./: .env  .gitignore  Cargo.toml  README.md  config.ini  my.db  output.txt  rustfmt.toml  test.json
hello_macro_derive/src/: lib.rs
l_21_01/: Cargo.toml
l_21_02/: Cargo.toml
l_21_02/src/: lib.rs  main.rs
l_21_03/: Cargo.toml
l_21_03/src/: lib.rs  main.rs
learn_21_01/: Cargo.toml
learn_21_01/src/: main.rs
learn_21_02/: Cargo.toml
learn_21_03/: Cargo.toml
macro/hello_macro_derive/: Cargo.toml
macro/l_macro_01/src/: lib.rs
macro/l_macro_02/src/: lib.rs
macro/l_macro_03/l_m/: Cargo.toml
macro/l_macro_03/l_m_derive/: Cargo.toml
macro/learn_macro_01/: Cargo.toml
macro/learn_macro_01/src/: lib.rs
macro/learn_macro_02/: Cargo.toml
migrations/: 20251114092006_init.sql
src/: collections.rs  front_of_house.rs  learn_06_10.rs  learn_10.rs  learn_11_15.rs  learn_16_20.rs  learn_enum.rs  learn_error_handle.rs  learn_more.rs  learn_other_crate.rs  lib.rs  main.rs  test.rs  test_macro.rs
src/api/: mod.rs
src/collections/: learn_hash_map.rs  learn_string_utf8.rs  learn_vector.rs
src/front_of_house/: hosting.rs
src/l_06_10/: mod.rs
src/l_06_10/l_06_enum/: learn_match.rs
src/l_11_15/: mod.rs
src/l_16_20/: learn_thread.rs  mod.rs
src/l_more/: mod.rs
src/learn_06_10/: learn_09_error_handle.rs
src/learn_08_collections/: learn_hash_map.rs  learn_string_utf8.rs
src/learn_09_error_handle/: learn_02_result.rs
src/learn_10/: learn_t.rs
src/learn_11_15/: learn_11_test.rs  learn_12_cmd.rs  learn_13_operater.rs  learn_14_cargoio.rs  learn_15_smart_pointer.rs  learn_thread.rs
src/learn_16_20/: learn_16_concurrent.rs  learn_17_async.rs  learn_18_object.rs  learn_20_advanced.rs
src/learn_21_22/: learn_21_web_server.rs  mod.rs
src/learn_enum/: learn_match.rs
src/learn_more/: learn_algorithm.rs  learn_other_crate.rs
src/learn_other_crate/: learn_axum.rs  learn_rand.rs  learn_reqwest.rs
src/my_qrcode/: mod.rs
(+76 files in other folders)
