[package]
name = "rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
qrcode = "0.14.1"
rand = "0.9.0"

reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"


