[package]
name = "rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
qrcode = "0.14.1"
rand = "0.9.0"

reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
trpl = "0.3.0"
hello_macro = { path = "./hello_macro/" }
hello_macro_derive = { path = "./hello_macro_derive/" }
axum = "0.8.6"

[profile.dev]
opt-level = 0  # 优化等级，0-3，s，z
[profile.release]
opt-level = 3
