[package]
name = "rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
qrcode = "0.14.1"
rand = "0.9.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
trpl = "0.3.0"
hello_macro = { path = "./macro/hello_macro/" }
hello_macro_derive = { path = "./macro/hello_macro_derive/" }
axum = "0.8.6"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
rust-ini = "0.21.3"
sqlx = {version = "0.8.6",features = ["postgres", "runtime-tokio", "macros"] }
tower-http = {version = "0.6.7",features = ["fs"] }
learn_macro_01 = { path = "./macro/l_macro_01/" }
learn_macro_02 = { path = "./macro/l_macro_02/" }
learn_macro_03 = { path = "./macro/l_macro_03/l_m/" , features = ["derive"],package = "l_m" }

[profile.dev]
opt-level = 0  # 优化等级，0-3，s，z

[profile.release]
opt-level = 3

